clusters/my-cluster/storeapi/qa/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: storeapi-qa
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: storeapi-qa
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7.0
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb
