clusters/my-cluster/storeapi/qa/storeapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: storeapi
  namespace: storeapi-qa
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: storeapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storeapi
  namespace: storeapi-qa
spec:
  selector:
    matchLabels:
      app: storeapi
  template:
    metadata:
      labels:
        app: storeapi
    spec:
      containers:
        - name: storeapi
          image: ghcr.io/betuelsa/avature-storeapi:qa-1-a92a265-1725232331 # {"$imagepolicy": "flux-system:storeapi-qa"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
      imagePullSecrets:
        - name: ghcr
